--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
+<body>
+    <h1>Vitor Ramos</h1>
+    <h2>Portfolio</h2>
+    <hr>
+    <h3><a href="./public/birthday-invite.html">irthday project</a></h3>
+    <img src="./assets/images/birthday-invite.png" height="200" alt="" srcset="">
+    <h3><a href="./public/movie-ranking.html">Movie Ranking project</a></h3>
+    <img src="./assets/images/movie-ranking.png" height="200" alt="" srcset="">
+</body>
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
